# Squirrel-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  devtask.md  devtask_info.md  documentation-request.md  documentation_request.md  feature_request.md
ardilla/: CMakeLists.txt
ardilla/core/ardilla/: CMakeLists.txt
ardilla/core/ardilla/include/: ardilla.h
ardilla/core/ardilla/src/: ardilla.cpp
ardilla/core/layers/: CMakeLists.txt
ardilla/core/layers/include/: layer_example.h
ardilla/core/layers/src/: layer_example.cpp
ardilla/src/: ardilla.cpp
squirrel/: CMakeLists.txt  config.h.ini  main.cpp  squirrel.h
squirrel/core/: CMakeLists.txt  application.cpp  application.h  entryPoint.hpp
squirrel/core/application/: CMakeLists.txt
squirrel/core/application/include/: application.h
squirrel/core/application/src/: application.cpp
squirrel/core/buffers/: CMakeLists.txt
squirrel/core/buffers/impl/opengl/: CMakeLists.txt
squirrel/core/buffers/impl/opengl/include/: opengl_buffers.h
squirrel/core/buffers/impl/opengl/src/: opengl_buffers.cpp
squirrel/core/buffers/include/: buffers.h
squirrel/core/buffers/src/: buffers.cpp
squirrel/core/camera/: CMakeLists.txt
squirrel/core/camera/include/: camera.h
squirrel/core/camera/src/: camera.cpp
squirrel/core/debug_layer/: CMakeLists.txt
squirrel/core/debug_layer/include/: debug_layer.h
squirrel/core/debug_layer/src/: debug_layer.cpp
squirrel/core/event_manager/: CMakeLists.txt
squirrel/core/event_manager/include/: event_manager.h
squirrel/core/event_manager/src/: event_manager.cpp
squirrel/core/events/: CMakeLists.txt
squirrel/core/events/include/: appEvent.h  event.h  eventTypes.h  keyEvent.h  mouseEvent.h  windowEvent.h
squirrel/core/events/src/: appEvent.cpp  event.cpp  keyEvent.cpp  mouseEvent.cpp  windowEvent.cpp
squirrel/core/graphics_context/: CMakeLists.txt
squirrel/core/graphics_context/impl/opengl/: CMakeLists.txt
squirrel/core/graphics_context/impl/opengl/include/: opengl_graphics_context.h
squirrel/core/graphics_context/impl/opengl/src/: opengl_graphics_context.cpp
squirrel/core/graphics_context/include/: graphics_context.h
squirrel/core/graphics_context/src/: graphics_context.cpp
squirrel/core/input_poller/: CMakeLists.txt
squirrel/core/input_poller/impl/glfw/: CMakeLists.txt
squirrel/core/input_poller/impl/glfw/include/: glfw_input_poller.h
squirrel/core/input_poller/impl/glfw/src/: glfw_input_poller.cpp
squirrel/core/input_poller/include/: input_poller.h
squirrel/core/input_poller/src/: input_poller.cpp
squirrel/core/layers/: CMakeLists.txt
squirrel/core/layers/include/: layer.h  layerstack.h
squirrel/core/layers/src/: layer.cpp  layerstack.cpp
squirrel/core/renderer/: CMakeLists.txt
squirrel/core/renderer/include/: renderer.h
squirrel/core/renderer/src/: renderer.cpp
squirrel/core/shader/: CMakeLists.txt
squirrel/core/shader/impl/opengl/: CMakeLists.txt
squirrel/core/shader/impl/opengl/include/: opengl_shader.h
squirrel/core/shader/impl/opengl/src/: fragment_shader_src.h  opengl_shader.cpp  vertex_shader_src.h
squirrel/core/shader/include/: shader.h
squirrel/core/shader/src/: shader.cpp
squirrel/core/window_manager/: CMakeLists.txt
squirrel/core/window_manager/impl/glfw/: CMakeLists.txt
squirrel/core/window_manager/impl/glfw/include/: glfw_window_manager.h
squirrel/core/window_manager/impl/glfw/src/: glfw_window_manager.cpp
squirrel/core/window_manager/include/: window_manager.h  window_property.h
squirrel/core/window_manager/src/: window_manager.cpp
squirrel/events/: appEvent.h  event.h  keyEvent.h  mouseEvent.h  windowEvent.h
squirrel/graphics/: CMakeLists.txt
squirrel/graphics/impl/opengl/: CMakeLists.txt  default_fragment.h  default_vertex.h  opengl_buffer.hpp  opengl_mesh.hpp  opengl_pipeline.hpp  opengl_shader.hpp  opengl_texture.hpp
squirrel/graphics/impl/opengl/renderer/: CMakeLists.txt
squirrel/graphics/impl/opengl/renderer/include/: opengl_renderer.h
squirrel/graphics/impl/opengl/renderer/src/: opengl_renderer.cpp
squirrel/graphics/include/: buffer.h  device.h  graphics.h  mesh.h  pipeline.h  shader.h  texture.h
squirrel/graphics/renderer/: CMakeLists.txt
squirrel/graphics/renderer/include/: renderer.h
squirrel/graphics/renderer/src/: renderer.cpp
squirrel/graphics/src/: device.cpp
squirrel/logger/: CMakeLists.txt  log.hpp
squirrel/utils/logger/: CMakeLists.txt  log-impl.h
